product details page with cleanu

--- a/public/index.html
+++ b/public/index.html
@@ -38,20 +38,20 @@
     <link
       rel="stylesheet"
       media="screen"
-      href="assets/vendor/simplebar/dist/simplebar.min.css"
+      href="/assets/vendor/simplebar/dist/simplebar.min.css"
     />
     <link
       rel="stylesheet"
       media="screen"
-      href="assets/vendor/tiny-slider/dist/tiny-slider.css"
+      href="/assets/vendor/tiny-slider/dist/tiny-slider.css"
     />
     <link
       rel="stylesheet"
       media="screen"
-      href="assets/vendor/drift-zoom/dist/drift-basic.min.css"
+      href="/assets/vendor/drift-zoom/dist/drift-basic.min.css"
     />
     <!-- Main Theme Styles + Bootstrap-->
-    <link rel="stylesheet" media="screen" href="assets/css/theme.min.css" />
+    <link rel="stylesheet" media="screen" href="/assets/css/theme.min.css" />
     <!-- Google Tag Manager-->
     <title>React App</title>
   </head>
@@ -69,12 +69,12 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- Vendor scrits: js libraries and plugins-->
-    <script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/simplebar/dist/simplebar.min.js"></script>
-    <script src="assets/vendor/tiny-slider/dist/min/tiny-slider.js"></script>
-    <script src="assets/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-    <script src="assets/vendor/drift-zoom/dist/Drift.min.js"></script>
+    <script src="/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/simplebar/dist/simplebar.min.js"></script>
+    <script src="/assets/vendor/tiny-slider/dist/min/tiny-slider.js"></script>
+    <script src="/assets/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+    <script src="/assets/vendor/drift-zoom/dist/Drift.min.js"></script>
     <!-- Main theme script-->
-    <script src="assets/js/theme.min.js"></script>
+    <script src="/assets/js/theme.min.js"></script>
   </body>
 </html>
