cart, checkout page

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 
     <meta
       name="description"
-      content="Cartzilla - Bootstrap E-commerce Template"
+      content="Cartzilla - Best phones in your budget!"
     />
-    <meta name="keywords" content="keywords here" />
+    <meta name="keywords" content="Best phones, best phones website, best phones under 10,000, top 5 phones, top phones in india!" />
     <meta name="author" content="Rahul More" />
     <!-- Viewport-->
     <!-- Favicon and Touch Icons-->
@@ -53,7 +53,7 @@
     <!-- Main Theme Styles + Bootstrap-->
     <link rel="stylesheet" media="screen" href="/assets/css/theme.min.css" />
     <!-- Google Tag Manager-->
-    <title>React App</title>
+    <title>Cartzilla | Mobile Zilla</title>
   </head>
   <body class="handheld-toolbar-enabled">
     <noscript>You need to enable JavaScript to run this app.</noscript>
